# netease-music-api

./: .env  .gitignore  CHANGELOG.md  Cargo.toml  Dockerfile  README.md  build_all.ps1  clippy.toml  cookie.txt.example  deploy.sh  docker-compose.yml  entrypoint.sh
.claude/: ARCHITECTURE.md  CLAUDE.md  settings.json  skills.yaml
.claude/lessons/: 2026-04-29-Bash-cmd-c-dir-dist.md  2026-04-29-loop-schedule-a-recurring.md  2026-05-04-Base-directory-for-this-skill.md
.claude/references/: adapter-handler.md  adapter-web.md  domain-model.md  domain-port.md  domain-service.md  entry.md  infra-cache.md  infra-download.md  infra-netease.md  infra-persistence.md  shared.md
.claude/references/_index/: _overview.md  channels.md  commands.md  domain-invariants.md  domain-sot.md  errors.md  io-adapters.md  io-application.md  io-domain.md  marker-consumes-index.md  marker-invariant.md  marker-pipeline-stage.md  marker-sot-call.md  marker-sot.md  middlewares.md  pipelines.md  ports-impls.md  ports.md  shared-state.md  spawn-points.md  use-cases.md
.claude/rules/: project.md
.claude/scripts/: precommit-cargo-fmt-gate.sh
.github/workflows/: ci.yml
crates/adapter/: Cargo.toml
crates/adapter/src/web/: extract.rs  mod.rs  response.rs  router.rs  state.rs
crates/adapter/src/web/handler/: admin.rs  album.rs  cookie.rs  download.rs  download_async.rs  download_batch.rs  download_meta.rs  health.rs  index.rs  info.rs  mod.rs  playlist.rs  search.rs  song.rs  stats.rs
crates/adapter/src/web/helpers/: error_response.rs  mod.rs  permit.rs  temp_zip.rs
crates/domain/: Cargo.toml
crates/domain/src/model/: api_error.rs  cookie.rs  download.rs  mod.rs  music_info.rs  quality.rs  song.rs
crates/domain/src/port/: cookie_store.rs  mod.rs  music_api.rs  stats_store.rs  task_store.rs
crates/domain/src/service/: album_service.rs  cookie_service.rs  download_service.rs  mod.rs  playlist_service.rs  search_service.rs  song_service.rs
crates/embed-assets/: Cargo.toml
crates/embed-assets/src/: embed.rs  main.rs  srt.rs  ui.rs
crates/embed-assets/src/scan/: fingerprint.rs  mod.rs  pipeline.rs  prompt.rs  relocate.rs
crates/infra/: Cargo.toml
crates/infra/src/: extract_id.rs  lib.rs
crates/infra/src/auth/: password.rs  token.rs
crates/infra/src/cache/: cover_cache.rs  mod.rs
crates/infra/src/download/: disk_guard.rs  engine.rs  lyrics_merge.rs  mod.rs  tags.rs  zip.rs
crates/infra/src/download/disk_guard/: mod.rs  select.rs
crates/infra/src/download/engine/: mod.rs  ranged.rs  single_stream.rs  wrapper.rs
crates/infra/src/http/: client_builder.rs  decorator.rs  error.rs  mod.rs
crates/infra/src/http/rate_limit/: governor_limiter.rs  mod.rs
crates/infra/src/http/retry/: executor.rs  mod.rs  policy.rs
crates/infra/src/netease/: api.rs  client.rs  crypto.rs  mod.rs  pic.rs  types.rs
crates/infra/src/persistence/: cookie_file.rs  mod.rs  stats_file.rs  task_memory.rs
crates/infra/tests/: http_rate_limit.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: config.rs  error.rs  lib.rs  runtime_config.rs
crates/kernel/src/observability/: event.rs  mod.rs  redact.rs
crates/kernel/src/util/: filename.rs  format.rs
docs/: AI_CONTEXT.md
docs/adr/: 001-download-link-lifecycle.md
docs/anti-patterns/: FORBIDDEN.md
docs/contracts/: download-link.contract.md
docs/guides/: adapter-web.md  domain-model.md  domain-port.md  domain-service.md  download-link-state-machine.md  download-link.md  infra-cache.md  infra-download.md  infra-netease.md  infra-persistence.md  kernel.md
src/: main.rs
templates/: index.html
tests/: auth_password.rs  contract_download_link.rs  crypto_test.rs  disk_guard.rs  engine_regression.rs  extract_id_fuzz.proptest-regressions  extract_id_fuzz.rs  property_tests.rs  runtime_config_validate.rs  task_state_machine.rs
