[workspace]
members = [
    "crates/kernel",
    "crates/domain",
    "crates/infra",
    "crates/adapter",
]

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
# managed-by: migrate-lints v0.1（部分 PR-J cleanup TODO 调到 allow）
nursery = { level = "allow", priority = -1 }

# === 生产安全底线（保留 warn）===
# 这些 lint 触发即真问题（调试遗留 / 占位符 / 内存泄漏 / 显式禁的方法等）
dbg_macro = "warn"
disallowed_methods = "warn"
mem_forget = "warn"
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
todo = "warn"
unimplemented = "warn"

# === unwrap/expect/let-underscore（PR-J cleanup TODO）===
# 现状：~12 处 expect/unwrap 在 builder pattern + static-config（如
# `Client::builder().build().expect("static config valid")`）+ ~20 处
# `let _ = std::fs::remove_file(&path)` fire-and-forget cleanup。两者均有
# 注释 reason 或语义上等价于 panic-on-bug。dist 后续 PR 用 helper 抽
# (`lock_or_poisoned` / `static_ok_client`) 集中一处 #[allow]。
expect_used = "allow"
unwrap_used = "allow"
let_underscore_must_use = "allow"

# === 纯风格 lint（暂 allow，PR-J cleanup TODO）===
# migrate-lints v0.1 sync 一次性引入 ~50 处预存代码的 mechanical 改动需求，
# 单独 cleanup PR 处理。dist gate 不阻断。把下方 = "allow" 改回 = "warn"
# 重跑 cargo clippy 即可恢复严格模式。
assertions_on_constants = "allow"
bool_to_int_with_if = "allow"
cast_lossless = "allow"
clone_on_ref_ptr = "allow"
default_trait_access = "allow"
fn_params_excessive_bools = "allow"
format_in_format_args = "allow"
if_then_some_else_none = "allow"
implicit_clone = "allow"
inefficient_to_string = "allow"
iter_overeager_cloned = "allow"
large_enum_variant = "allow"
manual_assert = "allow"
manual_inspect = "allow"
manual_let_else = "allow"
manual_map = "allow"
manual_ok_err = "allow"
manual_string_new = "allow"
manual_strip = "allow"
manual_unwrap_or = "allow"
map_err_ignore = "allow"
map_unwrap_or = "allow"
missing_const_for_fn = "allow"
needless_for_each = "allow"
needless_match = "allow"
needless_pass_by_value = "allow"
option_if_let_else = "allow"
option_option = "allow"
or_fun_call = "allow"
question_mark = "allow"
redundant_clone = "allow"
redundant_closure_for_method_calls = "allow"
redundant_pattern_matching = "allow"
result_large_err = "allow"
semicolon_if_nothing_returned = "allow"
single_char_pattern = "allow"
single_match_else = "allow"
string_lit_as_bytes = "allow"
struct_excessive_bools = "allow"
uninlined_format_args = "allow"
unnecessary_lazy_evaluations = "allow"
unnested_or_patterns = "allow"
unreadable_literal = "allow"
unused_async = "allow"
unused_self = "allow"
useless_conversion = "allow"
wildcard_enum_match_arm = "allow"
wildcard_imports = "allow"
[package]
name = "netease-music-api"
version = "3.0.0"
edition = "2021"

[[bin]]
name = "netease-music-api"
path = "src/main.rs"

[dependencies]
netease-kernel = { path = "crates/kernel" }
netease-domain = { path = "crates/domain" }
netease-infra = { path = "crates/infra" }
netease-adapter = { path = "crates/adapter" }
arc-swap = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
dashmap = "6"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
netease-infra = { path = "crates/infra" }
netease-kernel = { path = "crates/kernel" }
netease-domain = { path = "crates/domain" }
proptest = "1"
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[workspace.metadata.migrate-dist]
# bins 留空：不让默认拷贝输出 `netease-music-api.exe`；改由 extra_copies 出
# `netease-music-api-windows-x64.exe`（命名与 linux-x64 对称）
bins = []
# 极简配置：仅打包二进制 + Linux 一键部署脚本。
# 排除铁板层 + 启发式层默认拉的 README/LICENSE/Dockerfile/docs/templates 等。
include = [
    "deploy.sh",
]
exclude = [
    "README.md",
    "README*",
    "LICENSE*",
    "CHANGELOG.md",
    "Dockerfile",
    "docker-compose.yml",
    "docs/**",
    "templates/**",
    "scripts/**",
    "migrations/**",
    ".env.example",
    ".env.sample",
]

# Windows 二进制重命名为 -windows-x64.exe（与 Linux 命名对称）
[[workspace.metadata.migrate-dist.extra_copies]]
from = "target/release/netease-music-api{EXE}"
to = "netease-music-api-windows-x64{EXE}"

# Linux x64 cross-compile：用 cargo-zigbuild（zig 0.16 已装）做 C 链接器，
# 无需 musl-gcc。post_build hook 在 Windows host 跑完后触发。
# (migrate-dist 不原生支持 cargo zigbuild 替换 cargo build；此 hook 是绕过)
[[workspace.metadata.migrate-dist.post_build]]
run = "cargo zigbuild --release --target x86_64-unknown-linux-musl"
targets = ["x86_64-pc-windows-msvc"]

[[workspace.metadata.migrate-dist.extra_copies]]
from = "target/x86_64-unknown-linux-musl/release/netease-music-api"
to = "netease-music-api-linux-x64"
