[workspace]
members = [
    "crates/kernel",
    "crates/domain",
    "crates/infra",
    "crates/adapter",
]

[workspace.package]
version = "3.0.2"
edition = "2021"

[workspace.lints.rust]
unsafe_code = "forbid"
unused_must_use = "deny"

[workspace.lints.clippy]
# managed-by: migrate-lints v0.1
nursery = { level = "allow", priority = -1 }
assertions_on_constants = "warn"
bool_to_int_with_if = "warn"
cast_lossless = "warn"
clone_on_ref_ptr = "allow"  # PR-L cleanup TODO: ~20 处 Arc::clone(&x) vs x.clone()
dbg_macro = "warn"
default_trait_access = "warn"
disallowed_methods = "warn"
enum_variant_names = "warn"
expect_used = "allow"  # PR-J: ~7 处 builder pattern + static-config（如 Client::builder().build().expect("static config valid")）
fn_params_excessive_bools = "warn"
format_in_format_args = "warn"
if_then_some_else_none = "warn"
implicit_clone = "warn"
inefficient_to_string = "warn"
iter_overeager_cloned = "warn"
large_enum_variant = "warn"
let_underscore_must_use = "allow"  # PR-J: ~32 处 let _ = std::fs::remove_file(&path) fire-and-forget cleanup
manual_assert = "warn"
manual_inspect = "warn"
manual_let_else = "allow"  # PR-L cleanup TODO: ~20 处 match → let-else rewrite
manual_map = "warn"
manual_ok_err = "warn"
manual_string_new = "warn"
manual_strip = "warn"
manual_unwrap_or = "warn"
map_err_ignore = "allow"  # PR-L cleanup TODO: ~8 处 |_| 弃错改 |_e: T| 显式 named
map_unwrap_or = "warn"
mem_forget = "warn"
missing_const_for_fn = "warn"
needless_for_each = "warn"
needless_match = "warn"
needless_pass_by_value = "warn"
option_if_let_else = "allow"  # PR-L cleanup TODO: ~5 处 if let/else → map_or_else（可读性争议）
option_option = "warn"
or_fun_call = "allow"  # PR-L cleanup TODO: ~5 处 or() → or_else()（lazy 求值）
panic = "warn"
print_stderr = "warn"
print_stdout = "warn"
question_mark = "warn"
redundant_clone = "warn"
redundant_closure_for_method_calls = "warn"
redundant_pattern_matching = "warn"
result_large_err = "warn"
semicolon_if_nothing_returned = "warn"
single_char_pattern = "warn"
single_match_else = "warn"
string_lit_as_bytes = "warn"
struct_excessive_bools = "warn"
todo = "warn"
unimplemented = "warn"
uninlined_format_args = "warn"
unnecessary_lazy_evaluations = "warn"
unnested_or_patterns = "warn"
unreadable_literal = "allow"  # PR-L cleanup TODO: ~11 处 1234567 → 1_234_567
unused_async = "warn"
unused_self = "warn"
unwrap_used = "allow"  # PR-J: tests + builder pattern；生产代码改用 expect("invariant: ...") 或 ?
useless_conversion = "warn"
wildcard_enum_match_arm = "allow"  # PR-L cleanup TODO: ~8 处 _ => 改显式枚举 OR 模式
wildcard_imports = "warn"
[package]
name = "netease-music-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "netease-music-api"
path = "src/main.rs"

[dependencies]
netease-kernel = { path = "crates/kernel" }
netease-domain = { path = "crates/domain" }
netease-infra = { path = "crates/infra" }
netease-adapter = { path = "crates/adapter" }
arc-swap = "1"
axum = "0.8"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
dashmap = "6"
tower-http = { version = "0.6", features = ["cors", "fs"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
tracing-appender = "0.2"
chrono = { version = "0.4", features = ["serde"] }

[dev-dependencies]
serde_json = { version = "1", features = ["preserve_order"] }
netease-infra = { path = "crates/infra" }
netease-kernel = { path = "crates/kernel" }
netease-domain = { path = "crates/domain" }
proptest = "1"
tempfile = "3"
wiremock = "0.6"
tokio-test = "0.4"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }

[profile.release]
opt-level = 3
lto = true
strip = true
codegen-units = 1

[workspace.metadata.migrate-dist]
# bins 留空：不让默认拷贝输出 `netease-music-api.exe`；改由 extra_copies 出
# `netease-music-api-windows-x64.exe`（命名与 linux-x64 对称）
bins = []
# 极简配置：仅打包二进制 + Linux 一键部署脚本。
# 排除铁板层 + 启发式层默认拉的 README/LICENSE/Dockerfile/docs/templates 等。
include = [
    "deploy.sh",
]
exclude = [
    "README.md",
    "README*",
    "LICENSE*",
    "CHANGELOG.md",
    "Dockerfile",
    "docker-compose.yml",
    "docs/**",
    "templates/**",
    "scripts/**",
    "migrations/**",
    ".env.example",
    ".env.sample",
]

# Windows 二进制重命名为 -windows-x64.exe（与 Linux 命名对称）
[[workspace.metadata.migrate-dist.extra_copies]]
from = "target/release/netease-music-api{EXE}"
to = "netease-music-api-windows-x64{EXE}"

# Linux x64 cross-compile：用 cargo-zigbuild（zig 0.16 已装）做 C 链接器，
# 无需 musl-gcc。post_build hook 在 Windows host 跑完后触发。
# (migrate-dist 不原生支持 cargo zigbuild 替换 cargo build；此 hook 是绕过)
[[workspace.metadata.migrate-dist.post_build]]
run = "cargo zigbuild --release --target x86_64-unknown-linux-musl"
targets = ["x86_64-pc-windows-msvc"]

[[workspace.metadata.migrate-dist.extra_copies]]
from = "target/x86_64-unknown-linux-musl/release/netease-music-api"
to = "netease-music-api-linux-x64"
