[package]
name = "netease-adapter"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dev-dependencies]
tempfile = "3"

[dependencies]
netease-kernel = { path = "../kernel" }
netease-domain = { path = "../domain" }
netease-infra = { path = "../infra" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
serde_urlencoded = "0.7"
axum = { version = "0.8", features = ["macros"] }
tokio = { version = "1", features = ["full"] }
tower = "0.5"
tower-http = { version = "0.6", features = ["cors", "fs"] }
reqwest = { version = "0.13", default-features = false, features = ["json", "form", "stream", "rustls-no-provider"] }
lofty = "0.24"
futures = "0.3"
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
arc-swap = "1"
dashmap = "6"
urlencoding = "2"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
