[package]
name = "netease-domain"
version.workspace = true
edition.workspace = true

[lints]
workspace = true

[dependencies]
netease-kernel = { path = "../kernel" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
async-trait = "0.1"
futures = "0.3"
thiserror = "2"
tracing = "0.1"
