[package]
name = "netease-infra"
version = "3.0.0"
edition = "2021"

[lints]
workspace = true

[dependencies]
netease-kernel = { path = "../kernel" }
netease-domain = { path = "../domain" }
serde = { version = "1", features = ["derive"] }
serde_json = { version = "1", features = ["preserve_order"] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls"] }
lofty = "0.22"
aes = "0.8"
ecb = "0.1"
cipher = { version = "0.4", features = ["block-padding"] }
md-5 = "0.10"
base64 = "0.22"
zip = { version = "2", default-features = false }
futures = "0.3"
tokio = { version = "1", features = ["full"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tokio-util = { version = "0.7", features = ["io"] }
dashmap = "6"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
rand = "0.8"
url = "2"
hex = "0.4"
hmac = "0.12"
sha2 = "0.10"
fs2 = "0.4"
tracing = "0.1"
bcrypt = "0.17"
thiserror = "2"
governor = "0.7"
